--- a/>style.css
+++ b/>style.css
@@ -5,3 +5,22 @@ body{
 .cabeçalho-imagem{
     width: 20%;
 }
+.cabecalho{
+    width: 20%;
+}
+.cabecalho{
+    background-color: #383d58;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+}
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    padding: 24px 0;
+    font-size: 24px;
+}
+*{
+    margin: 0;
+    padding: 0;
+}
