--- a/>style.css
+++ b/>style.css
@@ -59,4 +59,13 @@ body {
   .estudante-todos{
      display: grid;
      grid-template-columns: 20% 20% 20% 20%;
+     font: optional;
+     background-color: black;
+     padding: 15px 0;
+     text-align: center;
+  }
+  footer{
+    background-color: black;
+    padding: 15px 0;
+    text-align: center;
   }
